deploy/base/transform-rest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transform-rest
  namespace: dh-health
  labels:
    app: transform-rest
spec:
  selector:
    matchLabels:
      app: transform-rest
  template:
    metadata:
      labels:
        app: transform-rest
    spec:
      containers:
      - name: transform-rest
        image: docker-health/transform-rest:latest
        ports:
        - containerPort: 8080
