deploy/base/transform-rest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transform-rest
  namespace: dh-health
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: transform-rest
